sidecars-examples/bind-sidecar.yaml
kind: Sidecar
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: sidecar-bind
spec:
  workloadSelector:
    labels:
      app: productpage
  egress:
    - hosts:
        - bookinfo/reviews.bookinfo.svc.cluster.local
        - bookinfo/details.bookinfo.svc.cluster.local
        - istio-system/*
      bind: 0.0.0.0
