sidecars-examples/multimatch-deployment.yaml
kind: Sidecar
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: sidecar-productpage-1
spec:
  workloadSelector:
    labels:
      app: productpage
  egress:
    - hosts:
        - default/reviews.default.svc.cluster.local
        - default/details.default.svc.cluster.local
        - istio-system/*
---
kind: Sidecar
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: sidecar-productpage-2
spec:
  workloadSelector:
    labels:
      app: productpage
      version: v1
  egress:
    - hosts:
        - default/reviews.default.svc.cluster.local
        - default/details.default.svc.cluster.local
        - istio-system/*
