sidecars-examples/productpage-sidecar.yaml
kind: Sidecar
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: sidecar-productpage
spec:
  workloadSelector:
    labels:
      app: productpage
  egress:
    - hosts:
        - bookinfo/reviews.bookinfo.svc.cluster.local
        - bookinfo/details.bookinfo.svc.cluster.local
        - istio-system/*
